# stm32-test-project

./: '  .gitignore  .pvs  CMakeLists.txt  Makefile  compile_commands.json  dma i2c  linker.ld  run.sh  tags
images/: convert.py
include/: defines.h  font.h  intr.h  strings.h  systick.h  test.h  types.h  uart.h  util.h  vectors.h
include/arm-cortex-m3/nvic/: int_type.h  sys_timer.h
include/core_stm/: afio.h  bkp.h  crc.h  dma.h  exti.h  gpio.h  i2c.h  pwr.h  rcc.h  rtc.h  usart.h
include/cortex-m3/: asm.h
include/cortex-m3/nvic/: nvic.h  scb.h  scs_interrupt_type.h  systick.h
include/gpio/: gpio.h
include/periph/: acc.h  lcd-hd44780u.h  lcd.h  nfc.h  oled-ssd1306.h
include/rcc/: rcc.h  rcc_apb2enr.h  rcc_cfgr.h  rcc_cr.h
src/: acc.c  font.c  gpio.c  i2c.c  lcd-hd44780u.c  lcd.c  main.c  oled-ssd1306.c  strings.c  systick.c  vectors.c
src/core_stm/: dma.c  exti.c  gpio.c  i2c.c  intr.c  rtc.c  systick.c  usart.c
src/periph/: acc.c  lcd-hd44780u.c  oled-ssd1306.c
src/stm/: main.c  test.c  vectors.c
src/stm1/: README.md  main.c  systick.c  vectors.c
src/stm2/: README.md  main.c  systick.c  vectors.c
src/stm3/: i2c.c  main.c  strings.c  vectors.c
